--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --build",
+    "build": "tsc --build && npm run copy-assets",
+    "copy-assets": "copyfiles -u 2 src/utils/templates/**/* dist/utils/templates",
     "start": "node ./dist/index.js",
     "dev": "nodemon ./src/index.ts"
   },
@@ -41,6 +42,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
+    "copyfiles": "^2.4.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
